<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/american_government_quiz"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/question1"
            android:textAllCaps="true" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/question_one_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_a1"
                android:text="@string/hawaii"
                style="@style/radioButtonStyle" />

            <RadioButton
                android:id="@+id/radio_a2"
                android:text="@string/alaska"
                style="@style/radioButtonStyle" />

            <RadioButton
                android:id="@+id/radio_a3"
                android:text="@string/arizona"
                style="@style/radioButtonStyle" />

            <RadioButton
                android:id="@+id/radio_a4"
                android:text="@string/new_mexico"
                style="@style/radioButtonStyle" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/question2"
            android:textAllCaps="false" />

        <CheckBox
            android:id="@+id/delaware_checkbox"
            android:text="@string/delaware"
            style="@style/checkBoxStyle" />

        <CheckBox
            android:id="@+id/pennsylvania_checkbox"
            android:text="@string/pennsylvania"
            style="@style/checkBoxStyle" />

        <CheckBox
            android:id="@+id/new_jersey_checkbox"
            android:text="@string/new_jersey"
            style="@style/checkBoxStyle" />

        <CheckBox
            android:id="@+id/georgia_checkbox"
            android:text="@string/georgia"
            style="@style/checkBoxStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/question3"
            android:textAllCaps="false" />

        <EditText
            android:id="@+id/question_three_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_text_edit"
            android:hint="@string/enter_1_or_2"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/question4"
            android:textAllCaps="false" />

        <CheckBox
            android:id="@+id/judicial_checkbox"
            android:text="@string/judicial"
            style="@style/checkBoxStyle" />

        <CheckBox
            android:id="@+id/executive_checkbox"
            android:text="@string/executive"
            style="@style/checkBoxStyle" />

        <CheckBox
            android:id="@+id/representative_checkbox"
            android:text="@string/representative"
            style="@style/checkBoxStyle" />

        <CheckBox
            android:id="@+id/president_checkbox"
            android:text="@string/president"
            style="@style/checkBoxStyle" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/quiz_results"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size" />


        <TextView
            android:id="@+id/quiz_results_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:text="@string/results"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="submitQuizResults"
            android:paddingTop="16dp"
            android:text="@string/quiz_results" />


    </LinearLayout>


</ScrollView>
